# money-note

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  repository.py  schemas.py  security.py  share_auth.py
backend/app/repositories/: __init__.py  cash_flows.py  common.py  entries.py  installments.py  labels.py  panels.py  settings.py
backend/app/routers/: admin.py  audit.py  auth.py  backups.py  card_payments.py  entries.py  month.py  operations.py  share.py
backend/app/services/: audit.py  card_payments.py  clock.py  csv_backup.py  discounts.py  judgment.py  maintenance.py  month.py  operation_stats.py  panels.py  presentation.py  reset.py  share.py  snapshot.py  summary.py  workbook.py
backend/app/services/judgment/: __init__.py  categories.py  claim.py  common.py  family_card.py  features.py  insight.py
backend/app/services/judgment/messages/: __init__.py  claim.yaml  family_card.yaml  insight.yaml
backend/scripts/: clean_panel_dates.py  create_user.py  export_xlsx.py  import_xlsx.py
backend/tests/: test_admin.py  test_audit.py  test_auth.py  test_card_payments.py  test_cash_flows.py  test_csv_backup.py  test_entry_constraints.py  test_judgment.py  test_month.py  test_operation_stats.py  test_panels.py  test_presentation.py  test_reset.py  test_security.py  test_settings.py  test_share.py  test_snapshot.py  test_summary.py
docs/: api.md  architecture.md  csv-backup.md  database.md  desktop-app.md  domain-model.md  known-issues.md  (+6 more)
(+91 files in other folders)
